--- a/examples/LAN9252_stm32f4/Cargo.toml
+++ b/examples/LAN9252_stm32f4/Cargo.toml
@@ -8,10 +8,7 @@ publish = false
 
 
 [dependencies]
-cortex-m = { version = "0.7.7", features = [
-    "inline-asm",
-    "critical-section-single-core",
-] }
+cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
 cortex-m-rt = "0.7.5"
 defmt = { version = "1.0.1", optional = true }
 defmt-rtt = { version = "1.0.0", optional = true }
@@ -32,7 +29,7 @@ embassy-time = { version = "0.5.0", features = ["tick-hz-32_768"] }
 embedded-hal = "1.0.0"
 panic-halt = "1.0.0"
 panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
-#soes-rs = { path = "../../../" }
+SOES-rs = { path = "../../" }
 
 [profile.dev]
 debug = true
